method casing